--- a/kHttpd/CMakeLists.txt
+++ b/kHttpd/CMakeLists.txt
@@ -14,6 +14,11 @@ if (APPLE)
     set(LIBEVENT_LIBRARIES event)
     link_directories(. /usr/local/lib/)
 endif ()
+
+if(LIBEVENT_LIBRARIES MATCHES "")
+    set(LIBEVENT_LIBRARIES event event_core event_extra)
+endif()
+
 include_directories(.
         H
         ${LIBEVENT_INCLUDE_DIRS}
